; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_scan.c_acpi_scan_add_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_scan.c_acpi_scan_add_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_scan_handler = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@acpi_scan_handlers_list = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_scan_add_handler(%struct.acpi_scan_handler* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_scan_handler*, align 8
  store %struct.acpi_scan_handler* %0, %struct.acpi_scan_handler** %3, align 8
  %4 = load %struct.acpi_scan_handler*, %struct.acpi_scan_handler** %3, align 8
  %5 = icmp ne %struct.acpi_scan_handler* %4, null
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @EINVAL, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load %struct.acpi_scan_handler*, %struct.acpi_scan_handler** %3, align 8
  %11 = getelementptr inbounds %struct.acpi_scan_handler, %struct.acpi_scan_handler* %10, i32 0, i32 0
  %12 = call i32 @list_add_tail(i32* %11, i32* @acpi_scan_handlers_list)
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %9, %6
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
